--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml/png" href="/public/vite.svg" />
-    <link
-      rel="stylesheet"
-      href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
-    />
+    <link rel="icon" type="image/png" href="/hotel-reservation/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hotel Booking</title>
     <script
@@ -17,6 +13,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <!-- NOTE: Vite จะ auto generate path ให้หลัง build -->
+    <script type="module" src="/hotel-reservation/assets/index.js"></script>
   </body>
 </html>
