--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   <body>
     <div id="root"></div>
     <!-- NOTE: Vite จะ auto generate path ให้หลัง build -->
-    <script type="module" src="/hotel-reservation/assets/index.js"></script>
+    <script type="module" src="/hotel-reservation/assets/index.html"></script>
   </body>
 </html>
