--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Hotel Booking</title>
     <script
       async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1232642399257285"
+      src="http://localhost:5174/"
       crossorigin="anonymous"
     ></script>
   </head>
